# HW31

./: conftest.py  db.sqlite3  factories.py  pyproject.toml  pytests.ini
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0002_remove_ad_address.py  0003_selection.py
ads/tests/: test_ads.py  test_selections.py  tests_ads.py
ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
avito/: settings.py  urls.py
data/: csv_to_json.py  location.json  user.csv  user.json
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng_and_more.py  0003_alter_user_role.py  0004_rename_location_user_locations.py
